--- a/css/sections/popular.css
+++ b/css/sections/popular.css
@@ -139,4 +139,22 @@
   min-width: 340px;
 }
 .popular-foods__card.active-card .popular-foods__card-image {
+  width: 214px;
+  height: 160px;
+}
+.popular-foods__card.active-card .popular-foods__card-title {
+  color: var(--black-500);
+  font-size: 32px;
+}
+.popular-foods__card.active-card .popular-foods__card-rating img {
+  width: 32px;
+  height: 32px;
+}
+.popular-foods__card.active-card .popular-foods__card-rating p {
+  font-size: 24px;
+  color: var(--gray-100);
+}
+.popular-foods__card.active-card .popular-foods__card-price {
+  font-size: 24px;
+  color: var(--secondary-color);
 }
