added footer and fixed responsive items

--- a/css/sections/subscribe.css
+++ b/css/sections/subscribe.css
@@ -2,7 +2,7 @@
   padding: 64px;
 
   background-color: var(--primary-color);
-  background-image: url(../../assets/subscribe_bg.png);
+  background-image: url("../../assets/subscribe_bg.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
@@ -10,15 +10,17 @@
   flex-direction: column;
   overflow: hidden;
 }
+
 .subscription h2 {
   font-size: 88px;
   font-family: var(--playfair-display);
   font-weight: 600;
   line-height: 123px;
 
-  color: white;
+  color: #fff;
   text-align: center;
 }
+
 .subscription p {
   font-size: 18px;
   font-family: var(--plus-jakarta-sans);
@@ -29,6 +31,7 @@
 
   color: rgba(255, 255, 255, 0.8);
 }
+
 .subscription__form {
   min-width: 480px;
   margin-top: 40px;
@@ -41,33 +44,42 @@
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 46px;
 }
+
 .subscription__form input {
   flex: 1;
+
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 400px;
   font-family: var(--plus-jakarta-sans);
 
-  color: white;
+  color: #fff;
   opacity: 0.5;
+
   background: transparent;
   border: none;
   outline: none;
 }
+
 .subscription__form input::placeholder {
-  color: white;
+  color: #fff;
   opacity: 0.5;
 }
+
 .subscription__form button {
   padding: 20px;
+
   min-width: 180px;
+
   font-size: 16px;
   font-weight: 500;
   font-family: var(--plus-jakarta-sans);
-  color: white;
+  color: #fff;
   text-align: center;
+
   background: var(--black-400);
   border-radius: 46px;
   border: none;
   outline: none;
+
   cursor: pointer;
 }
